--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -6,20 +6,16 @@ My Blog
 {% endblock %} 
 
 {% block css_files %}
+  <link rel="stylesheet" href="{% static "blog/post.css" %}" />
   <link rel="stylesheet" href="{% static "blog/index.css" %}" />
 {% endblock %}
 
 {% block content %}
-<header id="main-navigation">
-  <h1><a href="">Xingyou' Blog</a></h1>
-  <nav>
-    <a href="">All Posts</a>
-  </nav>
-</header>
+
 
 <section id="welcome">
   <header>
-    <img src="" alt="Xingyou - The Author Of This Blog" />
+    <img src="{% static "blog/images/bt.jpeg" %}" alt="Xingyou - The Author Of This Blog" />
     <h2>Xingyou's BLOG</h2>
   </header>
   <p>Hi, I am Xingyou and I love to blog about tech and the world!</p>
@@ -28,23 +24,9 @@ My Blog
 <section id="latest-posts">
   <h2>My Latest Thoughts</h2>
 
-  <ul>
-    <li>
-      <article class="post">
-        <a href="">
-          <img src="" alt="Mountain Hiking" />
-          <div class="post__content">
-            <h3>Mountain Hiking</h3>
-            <p>
-              There's nothing like the views you get when hiking in the
-              mountains! And I wasn't even prepared for what happened whilst I
-              was enjoying the view!
-            </p>
-          </div>
-        </a>
-      </article>
-    </li>
-  </ul>
+    {% for post in posts %}
+      {% include "blog/includes/post.html" %}
+    {% endfor %}
 </section>
 
 <section id="about">
@@ -54,8 +36,7 @@ My Blog
     technologies in general!
   </p>
   <p>
-    My goal is to keep on growing as a developer - and if I could help you do
-    the same, I'd be very happy!
+    My goal is to keep on growing as a developer.
   </p>
 </section>
 {% endblock %}
