--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -17,8 +17,21 @@
       <span class = "tag">{{ tag.caption }}</span>
     {% endfor %}
   </div>
+  <div id="read-later">
+    <form action="{% url 'read-later-page' %}" method="post">
+      {% csrf_token %}
+      <input type="hidden" name="post_id" value="{{ post.id }}">
+    <button>
+        {% if saved_for_later %}
+          Remove from Read Later
+        {% else %}
+          Save for Later
+        {% endif %}
+    </button>
+    </form>
+  </div>
   <article>
-    <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}" />
+    <img src="{{post.image.url}}" alt="{{ post.title }}" />
     <address>By <a href = "mailto:{{post.author.email}}">{{ post.author }}</a></address>
     <div>Last updated on <time>{{ post.date|date:"d M Y" }}</time></div>
   </article>
@@ -27,4 +40,42 @@
 <main>
   {{ post.content|linebreaks }}
 </main>
+
+<section id="comments">
+  <h2>Leave a Comment</h2>
+  <form action="{% url "post-detail-page" post.slug %}" method="post">
+    {% csrf_token %}
+    {% for form_field in comment_form%}
+      <div class="form-control">
+        {{ form_field.label_tag }}
+        {{ form_field }}
+        {{ form_field.errors }}
+        {% if form_field.errors %}
+          <div class="error">
+            {{ form_field.errors }}
+          </div>
+        {% endif %}
+      </div>
+    {%endfor%}
+    <button type="submit">Submit Comment</button>
+  </form>
+{% comment %} Display existing comments (if any) {% endcomment %}
+  <h2>Comments</h2>
+  {% if post.comments.all %}
+    <ul>
+      {% for comment in post.comments.all %}
+        <li>
+          <p>By <a href = "mailto:{{comment.email}}">{{ comment.author_name }} </a> on <time>{{ comment.created_at|date:"d M Y H:i" }}</time></p>
+          <p>{{ comment.text|linebreaks }}</p>
+        </li>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <p>No comments yet. Be the first to comment!</p>
+  {% endif %}   
+
+
+
+</section>
+
 {% endblock %}
